--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "framer-motion": "^12.29.0",
     "lucide-react": "^0.562.0",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.23",
